// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select/> @renders in default state 1`] = `
<div
  className=" FormComponent-country Select  is-selected"
>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={true}
    >
      <select
        aria-label=""
        className="Select-select"
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        role="listbox"
      />
    </PrivacyGuard>
  </div>
</div>
`;

exports[`<Select/> @renders in disabled state 1`] = `
<div
  className=" FormComponent-country Select  is-disabled is-selected"
>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={true}
    >
      <select
        aria-label=""
        className="Select-select"
        disabled={true}
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        role="listbox"
      />
    </PrivacyGuard>
  </div>
</div>
`;

exports[`<Select/> @renders in privacy protected state (sessioncamhidetext) 1`] = `
<div
  className=" FormComponent-country Select  is-selected"
>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={false}
    >
      <select
        aria-label=""
        className="Select-select"
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        role="listbox"
      >
        <option
          aria-selected={false}
          className="Select-select--option "
          disabled={false}
          key="0"
          role="option"
          value="SelectTest"
        >
          SelectTest
        </option>
        <option
          aria-selected={false}
          className="Select-select--option "
          disabled={true}
          key="1"
          role="option"
          value="SelectTest1"
        >
          SelectTest1
        </option>
        <option
          aria-selected={false}
          className="Select-select--option "
          disabled={false}
          key="2"
          role="option"
          value="SelectTest2"
        >
          SelectTest2
        </option>
      </select>
    </PrivacyGuard>
  </div>
</div>
`;

exports[`<Select/> @renders in required state 1`] = `
<div
  className=" FormComponent-country Select  is-selected"
>
  <div
    className="Select-head"
  >
    <label
      className="Select-label "
      htmlFor="country"
    >
      select country
      <span
        className="Select-required"
      >
        *
      </span>
    </label>
  </div>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={true}
    >
      <select
        aria-label="select country"
        className="Select-select"
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        required={true}
        role="listbox"
      />
    </PrivacyGuard>
  </div>
</div>
`;

exports[`<Select/> @renders with autofocus 1`] = `
<div
  className=" FormComponent-country Select  is-selected"
>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={true}
    >
      <select
        aria-label=""
        autoFocus={true}
        className="Select-select"
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        role="listbox"
      />
    </PrivacyGuard>
  </div>
</div>
`;

exports[`<Select/> @renders with class name 1`] = `
<div
  className=" FormComponent-country Select Select-test is-selected"
>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={true}
    >
      <select
        aria-label=""
        className="Select-select"
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        role="listbox"
      />
    </PrivacyGuard>
  </div>
</div>
`;

exports[`<Select/> @renders with errors 1`] = `
<div
  className=" FormComponent-country Select  is-erroring is-selected"
>
  <div
    className="Select-head"
  >
    <InputError
      className="Select-validationMessage"
      name="country"
    >
      has error
    </InputError>
  </div>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={true}
    >
      <select
        aria-label=""
        className="Select-select"
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        role="listbox"
      />
    </PrivacyGuard>
  </div>
</div>
`;

exports[`<Select/> @renders with firstDisabled 1`] = `
<div
  className=" FormComponent-country Select "
>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={true}
    >
      <select
        aria-label=""
        className="Select-select"
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        role="listbox"
        value="Demo Country"
      >
        <option
          className="Select-select--option "
          disabled={true}
        >
          Demo Country
        </option>
        <option
          aria-selected={false}
          className="Select-select--option "
          key="0"
          role="option"
          value="SelectTest"
        >
          SelectTest
        </option>
        <option
          aria-selected={false}
          className="Select-select--option "
          key="1"
          role="option"
          value="SelectTest1"
        >
          SelectTest1
        </option>
        <option
          aria-selected={false}
          className="Select-select--option "
          key="2"
          role="option"
          value="SelectTest2"
        >
          SelectTest2
        </option>
      </select>
    </PrivacyGuard>
  </div>
</div>
`;

exports[`<Select/> @renders with label  1`] = `
<div
  className=" FormComponent-country Select  is-selected"
>
  <div
    className="Select-head"
  >
    <label
      className="Select-label "
      htmlFor="country"
    >
      select country
    </label>
  </div>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={true}
    >
      <select
        aria-label="select country"
        className="Select-select"
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        role="listbox"
      />
    </PrivacyGuard>
  </div>
</div>
`;

exports[`<Select/> @renders with label hidden 1`] = `
<div
  className=" FormComponent-country Select  is-selected"
>
  <div
    className="Select-head"
  >
    <label
      className="Select-label screen-reader-text"
      htmlFor="country"
    >
      select country
    </label>
  </div>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={true}
    >
      <select
        aria-label="select country"
        className="Select-select"
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        role="listbox"
      />
    </PrivacyGuard>
  </div>
</div>
`;

exports[`<Select/> @renders with noTranslate with firstDisabled 1`] = `
<div
  className=" FormComponent-country Select  is-selected"
>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={true}
    >
      <select
        aria-label=""
        className="Select-select"
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        role="listbox"
      />
    </PrivacyGuard>
  </div>
</div>
`;

exports[`<Select/> @renders with noTranslate without firstDisabled 1`] = `
<div
  className=" FormComponent-country Select "
>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={true}
    >
      <select
        aria-label=""
        className="Select-select"
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        role="listbox"
        value="Demo Country"
      >
        <option
          className="Select-select--option  notranslate"
          disabled={true}
        >
          Demo Country
        </option>
        <option
          aria-selected={false}
          className="Select-select--option  notranslate"
          key="0"
          role="option"
          value="SelectTest"
        >
          SelectTest
        </option>
        <option
          aria-selected={false}
          className="Select-select--option  notranslate"
          key="1"
          role="option"
          value="SelectTest1"
        >
          SelectTest1
        </option>
        <option
          aria-selected={false}
          className="Select-select--option  notranslate"
          key="2"
          role="option"
          value="SelectTest2"
        >
          SelectTest2
        </option>
      </select>
    </PrivacyGuard>
  </div>
</div>
`;

exports[`<Select/> @renders with options as an array of objects 1`] = `
<div
  className=" FormComponent-country Select  is-selected"
>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={true}
    >
      <select
        aria-label=""
        className="Select-select"
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        role="listbox"
      >
        <option
          aria-selected={false}
          className="Select-select--option "
          disabled={false}
          key="0"
          role="option"
          value="SelectTest"
        >
          SelectTest
        </option>
        <option
          aria-selected={false}
          className="Select-select--option "
          disabled={true}
          key="1"
          role="option"
          value="SelectTest1"
        >
          SelectTest1
        </option>
        <option
          aria-selected={false}
          className="Select-select--option "
          disabled={false}
          key="2"
          role="option"
          value="SelectTest2"
        >
          SelectTest2
        </option>
      </select>
    </PrivacyGuard>
  </div>
</div>
`;

exports[`<Select/> @renders with options as an array of strings 1`] = `
<div
  className=" FormComponent-country Select  is-selected"
>
  <div
    className="Select-container "
  >
    <PrivacyGuard
      noProtection={true}
    >
      <select
        aria-label=""
        className="Select-select"
        id="country"
        name="country"
        onBlur={[Function]}
        onChange={[Function]}
        role="listbox"
      >
        <option
          aria-selected={false}
          className="Select-select--option "
          key="0"
          role="option"
          value="SelectTest"
        >
          SelectTest
        </option>
        <option
          aria-selected={false}
          className="Select-select--option "
          key="1"
          role="option"
          value="SelectTest1"
        >
          SelectTest1
        </option>
        <option
          aria-selected={false}
          className="Select-select--option "
          key="2"
          role="option"
          value="SelectTest2"
        >
          SelectTest2
        </option>
      </select>
    </PrivacyGuard>
  </div>
</div>
`;
